@@ -1,3 +1,9 @@
+1999-07-19  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* Makefile.am (*-recursive, *-am, *-multi): Automake does not
+	generate *-recursive for this Makefile, use *-am instead.
+	* Makefile.in: Rebuilt.
+
 1999-06-21  Tom Tromey  <tromey@cygnus.com>
 
 	* Makefile.in: Rebuilt.
